<resources>
    <string name="app_name">SahyogNew</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_wait">Loading</string>
    <string name="login_heading">NavSahyog Group</string>
    <string name="login_subheading">Enter Login Details</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_books">Books &amp; Assets</string>
    <string name="title_daily">Daily Report</string>
    <string name="title_uploads">Uploads</string>
    <string name="title_details">Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_attendance_fragment">Hello Attendance fragment</string>
    <string name="hello_activities_fragment">Hello Activities fragment</string>
    <string name="title_activity_tab_example">tabExample</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab1">Attendance</string>
    <string name="tab2">Activities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>