<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_uploads"
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        android:title="@string/title_uploads" />
    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/ic_twotone_assignment_24"
        android:title="@string/title_daily" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_books"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/title_books" />
    <item
        android:id="@+id/navigation_details"
        android:icon="@drawable/ic_twotone_person_24"
        android:title="@string/title_details" />
</menu>