<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tensors.sahyognew.MainView.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.tensors.sahyognew.MainView.books.BooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/navigation_daily"
        android:name="com.tensors.sahyognew.MainView.daily.DailyFragment"
        android:label="@string/title_daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.tensors.sahyognew.MainView.details.DetailFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" />
    <fragment
        android:id="@+id/navigation_uploads"
        android:name="com.tensors.sahyognew.MainView.uploads.UploadsFragment"
        android:label="@string/title_uploads"
        tools:layout="@layout/fragment_uploads" />
</navigation>